--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Benoit Hubert <benoit.hubert@wildcodeschool.com>",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^7.11.0"
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1"
   },
   "dependencies": {
     "chalk": "^4.1.0"
